Fix: width scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 7px;
 }
 
 ::-webkit-scrollbar-track {
@@ -17,7 +17,7 @@
 
 ::-webkit-scrollbar-thumb {
 	background: rgb(0, 116, 116);
-	border-radius: 5px;
+	border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
